[package]
name = "const_units"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "README.md", "build.rs", "data/*"]

[profile.release]
opt-level = 3
lto = true
incremental = false
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = {version = "0.4.1", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
toml = "0.8"
syn = {version = "2", features = ["extra-traits","derive", "full"]}
quote = "1.0"
proc-macro2 = "1.0.59"
# waiting for https://github.com/rutrum/convert-case/pull/14 to be merged
convert_case = {git = "https://github.com/haennes/convert-case.git", features = ["encased"]}
num-traits = "0.2"
itertools = "0.12"
parse-display = "0.9"
self-rust-tokenize = "0.3"
const_units_macros = {path = "const_units_macros"}
const_units_global_types = {path = "const_units_global_types"}
const_units_uuse = {path = "const_units_uuse"}
const_ops = "0.2"
const_traits = "0.3.0"
hashmap_macro = "0.1"
either = {version = "1", features = ["serde"]}
getset = "0.1"
num-format = "0.4"
cvec = "0.1"

[dependencies.num-integer]
version = "0.1.42"
features = ["i128"]
default-features = false

[patch.crates-io]
# const_ops = { path = "../const_ops" }
const_ops = { git = "https://github.com/haennes/const_ops", rev = "f0a25f9ddfb24523a5e1e67f9673bc7fa0b1a940" }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
sled = "0.34.7"
hashmap_macro = "*"

[build-dependencies]
const_units_code_gen = {path = "const_units_code_gen"}
syn = "2.0.28"
prettyplease = "*"
#common_serde = {path = "common_serde"}
